--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Gamifications</title>
-    <link rel="shortcut icon" href="kr/TemplateData/favicon.ico">
-    <link rel="stylesheet" href="kr/TemplateData/style.css">
-    <link rel="manifest" href="kr/manifest.webmanifest">
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <div id="unity-container">
@@ -22,7 +22,7 @@
     <script>
       window.addEventListener("load", function () {
         if ("serviceWorker" in navigator) {
-          navigator.serviceWorker.register("kr/ServiceWorker.js");
+          navigator.serviceWorker.register("ServiceWorker.js");
         }
       });
 
@@ -56,13 +56,13 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "kr/Build";
+      var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Build.loader.js";
       var config = {
         dataUrl: buildUrl + "/Build.data",
         frameworkUrl: buildUrl + "/Build.framework.js",
         codeUrl: buildUrl + "/Build.wasm",
-        streamingAssetsUrl: "kr/StreamingAssets",
+        streamingAssetsUrl: "StreamingAssets",
         companyName: "fmDILabs",
         productName: "Gamifications",
         productVersion: "1.0.2",
